feat: Sandbox-specific, optional components
Google Tag Manager, CookieYes, reCaptcha can be turned on from the .env file

--- a/.env.dusk.ci
+++ b/.env.dusk.ci
@@ -45,3 +45,13 @@ REGISTERED_USER_LIMIT=0
 EMAIL_VERIFICATION_REQUIRED=FALSE
 ADMIN_EMAIL=admin@yaffa.test
 INCOMING_RECEIPTS_EMAIL=receipts@yaffa.test
+
+# Recaptcha, only for Sandbox
+RECAPTCHA_SITE_KEY=
+RECAPTCHA_SECRET_KEY=
+
+# Google Tag Manager, only for Sandbox
+GTM_CONTAINER_ID=
+
+# CookieYes, only for Sandbox
+COOKIEYES_ID=
