--- a/.env.example
+++ b/.env.example
@@ -100,3 +100,19 @@ ENLIGHTN_API_TOKEN=
 # Sentry - optional, if you want to use Sentry for error reporting
 SENTRY_LARAVEL_DSN=
 SENTRY_TRACES_SAMPLE_RATE=
+
+#####################################################################################
+### The settings below are used by the special, public-facing Sandbox environment ###
+#####################################################################################
+# You probably won't need them, and can leave them as is
+# Feel free to provide your own values, if you need any of these features
+
+# Recaptcha
+RECAPTCHA_SITE_KEY=
+RECAPTCHA_SECRET_KEY=
+
+# Google Tag Manager
+GTM_CONTAINER_ID=
+
+# CookieYes
+COOKIEYES_ID=
