--- a/.env.example.complete
+++ b/.env.example.complete
@@ -72,3 +72,13 @@ ENLIGHTN_API_TOKEN=
 # Sentry - optional, if you want to use Sentry for error reporting
 SENTRY_LARAVEL_DSN=your-sentry-dsn
 SENTRY_TRACES_SAMPLE_RATE=1.0
+
+# Recaptcha, only for Sandbox
+RECAPTCHA_SITE_KEY=
+RECAPTCHA_SECRET_KEY=
+
+# Google Tag Manager, only for Sandbox
+GTM_CONTAINER_ID=
+
+# CookieYes, only for Sandbox
+COOKIEYES_ID=
