--- a/.env.example.docker
+++ b/.env.example.docker
@@ -96,3 +96,13 @@ SESSION_LIFETIME=120
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+
+# Recaptcha, only for Sandbox
+RECAPTCHA_SITE_KEY=
+RECAPTCHA_SECRET_KEY=
+
+# Google Tag Manager, only for Sandbox
+GTM_CONTAINER_ID=
+
+# CookieYes, only for Sandbox
+COOKIEYES_ID=
