--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "php": "^8.1",
         "amrshawky/laravel-currency": "^5.0",
         "beyondcode/laravel-mailbox": "^3.1",
+        "biscolab/laravel-recaptcha": "^6.0",
         "bkwld/cloner": "^3.11",
         "enlightn/enlightn": "^2.1",
         "fakerphp/faker": "^1.13",
