fix: adjust automated testing workflow

--- a/.github/workflows/automated-tests.yml
+++ b/.github/workflows/automated-tests.yml
@@ -64,7 +64,7 @@ jobs:
           DB_PORT: ${{ job.services.mysql.ports['3306'] }}
 
       - name: Run Testsuite
-        run: vendor/bin/phpunit --colors=never --verbose --coverage-clover=coverage.xml --testsuite AllNonDusk
+        run: vendor/bin/phpunit --colors=never --coverage-clover=coverage.xml --testsuite AllNonDusk
         env:
           DB_PORT: ${{ job.services.mysql.ports['3306'] }}
 
@@ -79,6 +79,12 @@ jobs:
       DB_PASSWORD: root
       MAIL_MAILER: log
     steps:
+      - name: Setup PHP Action
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.3'
+          extensions: mbstring, dom, fileinfo, mysql
+
       - uses: actions/checkout@v4
 
       - name: Prepare The Environment
