ci: limit automated tests to relevant changes

--- a/.github/workflows/automated-tests.yml
+++ b/.github/workflows/automated-tests.yml
@@ -7,6 +7,22 @@ on:
       - main
       - other/sandbox
 
+    # Only run tests if relevant file types (php, js, css, etc) are changed
+    paths:
+      - '**.php'
+      - '**.js'
+      - '**.css'
+      - '**.vue'
+      - '**.scss'
+      - '**.env.ci'
+      - '**.env.dusk.ci'
+      - '**.json'
+      - '**.lock'
+      - '**.xml'
+      - '**.yml'
+      - '**.gitignore'
+      - '**.gitattributes'
+
 jobs:
   phpunit:
     runs-on: ubuntu-latest
