--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         "deployer/deployer": "^7.3",
         "imanghafoori/laravel-microscope": "^1.0",
         "kkomelin/laravel-translatable-string-exporter": "^1.17",
+        "larastan/larastan": "^2.0",
         "laravel/dusk": "7.9.3",
         "laravel/pint": "^1.1",
         "laravel/sail": "^1.16",
@@ -45,7 +46,6 @@
         "mockery/mockery": "^1.4.2",
         "nikaia/translation-sheet": "dev-feature/config_empty_behavior",
         "nunomaduro/collision": "^7.0",
-        "nunomaduro/larastan": "^2.0",
         "nunomaduro/phpinsights": "^2.0",
         "phpunit/phpunit": "^10.0",
         "roquie/laravel-dusk-select2": "dev-feature/search_selector_delay",
