--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
         "@popperjs/core": "^2.11.6",
         "axios": "^1.6.4",
         "bootstrap": "^5.3.1",
-        "datatables.net": "^1.13.1",
-        "datatables.net-bs5": "^1.13.1",
-        "datatables.net-responsive-bs5": "^2.4.0",
+        "datatables-contextual-actions": "github:kantorge/datatables-contextual-actions#fix/remove_orphaned_dividers",
+        "datatables.net-bs5": "^2.0.3",
+        "datatables.net-responsive-bs5": "^3.0.0",
+        "datatables.net-select-bs5": "^2.0.0",
+        "driver.js": "^1.3.1",
         "jquery": "^3.6.3",
         "jquery-csv": "^1.0.21",
         "json-rules-engine": "^6.5.0",
