--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "beyondcode/laravel-mailbox": "^3.1",
         "biscolab/laravel-recaptcha": "^6.0",
         "bkwld/cloner": "^3.11",
+        "diglactic/laravel-breadcrumbs": "^9.0",
         "enlightn/enlightn": "^2.1",
         "fakerphp/faker": "^1.13",
         "guzzlehttp/guzzle": "^7.0.1",
