fix: release please configuration

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -16,11 +16,7 @@ jobs:
       - name: Run Release Please
         uses: google-github-actions/release-please-action@v4
         with:
-          default-branch: main
-          release-type: php
-          package-name: kantorge/yaffa
-          release-search-depth: 100
-          commit-search-depth: 100
+          target-branch: main
 
       - name: Store output
         run: echo "${{ steps.release.outputs.release_created }}" > release-created.txt
