--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@popperjs/core": "^2.11.6",
         "axios": "^1.6.8",
         "bootstrap": "^5.3.1",
+        "countries-list": "^3.1.0",
         "datatables-contextual-actions": "github:kantorge/datatables-contextual-actions#fix/remove_orphaned_dividers",
         "datatables.net-bs5": "^2.0.6",
         "datatables.net-responsive-bs5": "^3.0.2",
