fix: minor fixes and code cleanups

--- a/.env.example
+++ b/.env.example
@@ -43,9 +43,12 @@ MAIL_FROM_NAME=YAFFA
 # Your key for the Alpha Vantage API, which is used to fetch stock prices
 ALPHA_VANTAGE_KEY=
 
+# Your configuration for the Mailbox service, which is used to receive emails
 MAILBOX_DRIVER=sendgrid
-INCOMING_RECEIPTS_EMAIL=
 MAILBOX_HTTP_PASSWORD=
+# The email address where incoming receipts are sent, and which is monitored by the Mailbox service
+INCOMING_RECEIPTS_EMAIL=
+# Your OpenAI key, which is used when AI is asked to process incoming email receipts
 OPENAI_API_KEY=
 
 ### Application-specific configuration ###
@@ -55,10 +58,13 @@ OPENAI_API_KEY=
 # Increase this value if you want to allow other users to register, or set it to empty to allow unlimited registrations.
 REGISTERED_USER_LIMIT=1
 
-# Does new users have to verify their email address before they can log in?
+# Do new users have to verify their email address before they can log in?
 # For a local, personal instance, without access to outgoing emails, this should be set to false.
 # For a public instance, this should probably be set to true.
 EMAIL_VERIFICATION_REQUIRED=FALSE
+
+# The URL of the application, used for generating links in emails
+APP_URL=http://localhost
 
 # The email address of the administrator of the system, who will receive notifications about new users, logins, etc.
 # Leave this empty if you don't want to receive any notifications
@@ -79,9 +85,6 @@ TELESCOPE_ENABLED=FALSE
 
 # Debugbar should not be enabled, unless Composer dev dependencies are installed
 DEBUGBAR_ENABLED=FALSE
-
-# The URL of the application, used for generating links in emails
-APP_URL=http://localhost
 
 ### Internal tools and services ###
 BROADCAST_DRIVER=log
