fix: streamline .env file versions

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # This file is a "template" of which env vars need to be defined for your application.
-# Copy this file as .env in the project root folder, and replace the values with your own
+# Copy this file as .env in the project root folder, and replace the values with your own ones
 # This version contains the minimal set of variables required to run your own YAFFA instance.
 # For a full list of available variables, see the .env.example.complete file
 
@@ -29,7 +29,7 @@ DB_USERNAME=yaffa_user
 DB_PASSWORD=yaffa_password
 DB_SOCKET=
 
-# Mail configuration
+# Define the configuration for sending emails
 MAIL_MAILER=log
 MAIL_HOST=
 MAIL_PORT=
@@ -46,8 +46,10 @@ ALPHA_VANTAGE_KEY=
 # Your configuration for the Mailbox service, which is used to receive emails
 MAILBOX_DRIVER=sendgrid
 MAILBOX_HTTP_PASSWORD=
+
 # The email address where incoming receipts are sent, and which is monitored by the Mailbox service
 INCOMING_RECEIPTS_EMAIL=
+
 # Your OpenAI key, which is used when AI is asked to process incoming email receipts
 OPENAI_API_KEY=
 
@@ -85,6 +87,7 @@ TELESCOPE_ENABLED=FALSE
 
 # Debugbar should not be enabled, unless Composer dev dependencies are installed
 DEBUGBAR_ENABLED=FALSE
+DEBUGBAR_OPEN_STORAGE=""
 
 ### Internal tools and services ###
 BROADCAST_DRIVER=log
@@ -95,6 +98,15 @@ SESSION_LIFETIME=120
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+
+# Sail settings
+WWWGROUP=1000
+WWWUSER=1000
+SAIL_XDEBUG_ENABLED=false
+SAIL_XDEBUG_PORT=9003
+SAIL_XDEBUG_MODE=develop,debug
+SAIL_XDEBUG_CONFIG="client_host=host.docker.internal"
+APP_SERVICE=yaffa.test
 
 # Enlightn - optional, if you want to run the Enlightn security checks and save the results to their online dashboard
 ENLIGHTN_USERNAME=
@@ -109,6 +121,9 @@ SENTRY_TRACES_SAMPLE_RATE=
 #####################################################################################
 # You probably won't need them, and can leave them as is
 # Feel free to provide your own values, if you need any of these features
+
+# General flag to enable/disable some custom behavior or the Sandbox environment
+SANDBOX_ENABLED=false
 
 # Recaptcha
 RECAPTCHA_SITE_KEY=
