feat: optional settings for the public facing sandbox environment

--- a/.env.example
+++ b/.env.example
@@ -123,7 +123,7 @@ SENTRY_TRACES_SAMPLE_RATE=
 # Feel free to provide your own values, if you need any of these features
 
 # General flag to enable/disable some custom behavior or the Sandbox environment
-SANDBOX_ENABLED=false
+SANDBOX_MODE=false
 
 # Recaptcha
 RECAPTCHA_SITE_KEY=
