--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "tightenco/ziggy": "^1.3"
     },
     "require-dev": {
+        "alebatistella/duskapiconf": "^1.2",
         "barryvdh/laravel-debugbar": "^3.5",
         "barryvdh/laravel-ide-helper": "^2.12",
         "deployer/deployer": "^7.3",
