fix: various setting adjustments

--- a/.env.example.complete
+++ b/.env.example.complete
@@ -15,9 +15,9 @@ TELESCOPE_ENABLED=false
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=yaffa
+DB_USERNAME=yaffa_user
+DB_PASSWORD=yaffa_password
 DB_SOCKET=
 
 BROADCAST_DRIVER=log
