fix: Dockerfile reference for build action

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -30,4 +30,4 @@ jobs:
             kantorge/yaffa:latest
             kantorge/yaffa:${{ github.ref_name }}
           context: .
-          file: ./docker/Dockerfile: ./Dockerfile
+          file: ./docker/Dockerfile
