--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -4,11 +4,29 @@ on:
   push:
     tags:
       - 'v*.*.*'
+  workflow_dispatch:
+    inputs:
+      ref_name:
+        description: 'Reference name to simulate github.ref_name'
+        required: true
+        default: 'main'
 
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
+      # Steps for testing
+      - name: Check out the repository
+        uses: actions/checkout@v2
+
+      - name: Set github.ref_name
+        if: github.event_name == 'workflow_dispatch'
+        run: echo "github.ref_name=${{ github.event.inputs.ref_name }}" >> $GITHUB_ENV
+
+      - name: Print github.ref_name
+        run: echo "github.ref_name is ${{ github.ref_name }}"
+
+      # Steps for building and pushing
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
