doc: simplify the .env sample files

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # This file is a "template" of which env vars need to be defined for your application.
 # Copy this file as .env in the project root folder, and replace the values with your own
-# This version contains the minimal set of variables required to run your own YAFFA instance.
-# For a full list of available variables, see the .env.example.complete file
+# This version contains all possible variables required to run your own YAFFA instance.
+# These are grouped into sections, especially highlighting the most important, fundamental ones.
 
 ### Basic app configuration ###
 
@@ -10,15 +10,6 @@
 # Make sure to keep this key secret, and don't share it with anyone.
 # Also, don't change it after you have started using the application.
 APP_KEY=PleaseReplaceThisWithARandomStringOf32Chars
-
-# Set this to true if you need to see detailed error messages
-APP_DEBUG=false
-
-# You can specify the log channel to be used for logging
-LOG_CHANNEL=stack
-
-# The minimum log level to be written to the log files
-LOG_LEVEL=error
 
 ### Database configuration ###
 DB_CONNECTION=mysql
@@ -78,13 +69,16 @@ ADMIN_EMAIL=
 APP_NAME=YAFFA
 
 # The environment in which the application is running
-APP_ENV=local
+APP_ENV=production
 
-# Telescope should not be enabled, unless Composer dev dependencies are installed
-TELESCOPE_ENABLED=FALSE
+# Set this to true if you need to see detailed error messages
+APP_DEBUG=false
 
-# Debugbar should not be enabled, unless Composer dev dependencies are installed
-DEBUGBAR_ENABLED=FALSE
+# You can specify the log channel to be used for logging
+LOG_CHANNEL=stack
+
+# The minimum log level to be written to the log files
+LOG_LEVEL=error
 
 ### Internal tools and services ###
 BROADCAST_DRIVER=log
@@ -119,3 +113,28 @@ GTM_CONTAINER_ID=
 
 # CookieYes
 COOKIEYES_ID=
+
+#######################################################################################################
+### The settings below are related to development and testing, and should not be used in production ###
+#######################################################################################################
+
+# Translation sheet settings
+TS_SERVICE_ACCOUNT_EMAIL=
+TS_SERVICE_ACCOUNT_CREDENTIALS_FILE=
+TS_SPREADSHEET_ID=
+TS_LOCALES=
+
+# Sail
+WWWGROUP=1000
+WWWUSER=1000
+APP_SERVICE=yaffa.test
+SAIL_XDEBUG_ENABLED=false
+SAIL_XDEBUG_PORT=9003
+SAIL_XDEBUG_MODE=develop,debug
+SAIL_XDEBUG_CONFIG="client_host=host.docker.internal"
+
+# Telescope should not be enabled, unless Composer dev dependencies are installed
+TELESCOPE_ENABLED=FALSE
+
+# Debugbar should not be enabled, unless Composer dev dependencies are installed
+DEBUGBAR_ENABLED=FALSE
