Feat: Docker assets (#261)
* feat: assets to allow Docker installation

* feat: Docker build flow and cleanup

* docs: simplify the .env sample files

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # This file is a "template" of which env vars need to be defined for your application.
-# Copy this file as .env in the project root folder, and replace the values with your own ones
-# This version contains all possible settings and their descriptions,
-# also indicating the minimum set of variables required to run your own YAFFA instance.
+# Copy this file as .env in the project root folder, and replace the values with your own settings.
+# This version contains all possible variables required to run your own YAFFA instance.
+# These are grouped into sections, especially highlighting the most important, fundamental ones.
 
 ###############################
 ### Basic app configuration ###
@@ -97,13 +97,6 @@ LOG_CHANNEL=stack
 # The minimum log level to be written to the log files
 LOG_LEVEL=error
 
-# Telescope should not be enabled, unless Composer dev dependencies are installed
-TELESCOPE_ENABLED=FALSE
-
-# Debugbar should not be enabled, unless Composer dev dependencies are installed
-DEBUGBAR_ENABLED=FALSE
-DEBUGBAR_OPEN_STORAGE=
-
 ### Internal tools and services ###
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -113,15 +106,6 @@ SESSION_LIFETIME=120
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
-
-# Laravel Sail settings
-WWWGROUP=1000
-WWWUSER=1000
-SAIL_XDEBUG_ENABLED=false
-SAIL_XDEBUG_PORT=9003
-SAIL_XDEBUG_MODE=develop,debug
-SAIL_XDEBUG_CONFIG="client_host=host.docker.internal"
-APP_SERVICE=yaffa.test
 
 # Enlightn - optional, if you want to run the Enlightn security checks and save the results to their online dashboard
 ENLIGHTN_USERNAME=
@@ -149,3 +133,29 @@ GTM_CONTAINER_ID=
 
 # CookieYes - used for cookie consent management, related to tracking and analytics
 COOKIEYES_ID=
+
+#######################################################################################################
+### The settings below are related to development and testing, and should not be used in production ###
+#######################################################################################################
+
+# Translation sheet settings
+TS_SERVICE_ACCOUNT_EMAIL=
+TS_SERVICE_ACCOUNT_CREDENTIALS_FILE=
+TS_SPREADSHEET_ID=
+TS_LOCALES=
+
+# Laravel Sail settings
+WWWGROUP=1000
+WWWUSER=1000
+APP_SERVICE=yaffa.test
+SAIL_XDEBUG_ENABLED=false
+SAIL_XDEBUG_PORT=9003
+SAIL_XDEBUG_MODE=develop,debug
+SAIL_XDEBUG_CONFIG="client_host=host.docker.internal"
+
+# Telescope should not be enabled, unless Composer dev dependencies are installed
+TELESCOPE_ENABLED=FALSE
+
+# Debugbar should not be enabled, unless Composer dev dependencies are installed
+DEBUGBAR_ENABLED=FALSE
+DEBUGBAR_OPEN_STORAGE=
