--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,9 +1,11 @@
 name: Build and Push Docker images for new version
 
 on:
-  push:
-    tags:
-      - 'v*.*.*'
+ push:
+  branches:
+    - main
+  tags:
+    - 'v*.*.*'
   workflow_dispatch:
     inputs:
       ref_name:
@@ -30,7 +32,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Set up QEMU
