--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -21,9 +21,13 @@ jobs:
       - name: Check out the repository
         uses: actions/checkout@v2
 
-      - name: Set github.ref_name
+      - name: Set github.ref_name from workflow_dispatch
         if: github.event_name == 'workflow_dispatch'
         run: echo "github.ref_name=${{ github.event.inputs.ref_name }}" >> $GITHUB_ENV
+
+      - name: Set github.ref_name from tag
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
+        run: echo "github.ref_name=${{ github.ref }}" >> $GITHUB_ENV
 
       - name: Print github.ref_name
         run: echo "github.ref_name is ${{ github.ref_name }}"
