--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -27,10 +27,12 @@ jobs:
 
       - name: Set github.ref_name from tag
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
-        run: echo "github.ref_name=${{ github.ref }}" >> $GITHUB_ENV
+        run: echo "github.ref_name=${{ github.ref_name }}" >> $GITHUB_ENV
 
       - name: Print github.ref_name
-        run: echo "github.ref_name is ${{ github.ref_name }}"
+        run: |
+          echo "github.event_name is ${{ github.event_name }}"
+          echo "github.ref_name is ${{ env.github.ref_name }}"
 
       # Steps for building and pushing
       - name: Login to Docker Hub
@@ -52,6 +54,6 @@ jobs:
           push: true
           tags: |
             kantorge/yaffa:latest
-            kantorge/yaffa:${{ github.ref_name }}
+            kantorge/yaffa:${{ env.github.ref_name }}
           context: .
           file: ./docker/Dockerfile
