--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -23,16 +23,16 @@ jobs:
 
       - name: Set github.ref_name from workflow_dispatch
         if: github.event_name == 'workflow_dispatch'
-        run: echo "github.ref_name=${{ github.event.inputs.ref_name }}" >> $GITHUB_ENV
+        run: echo "DOCKER_VERSION_TAG=${{ github.event.inputs.ref_name }}" >> $GITHUB_ENV
 
       - name: Set github.ref_name from tag
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
-        run: echo "github.ref_name=${{ github.ref_name }}" >> $GITHUB_ENV
+        run: echo "DOCKER_VERSION_TAG=${{ github.ref_name }}" >> $GITHUB_ENV
 
       - name: Print github.ref_name
         run: |
           echo "github.event_name is ${{ github.event_name }}"
-          echo "github.ref_name is ${{ env.github.ref_name }}"
+          echo "github.ref_name is ${{ env.DOCKER_VERSION_TAG }}"
 
       # Steps for building and pushing
       - name: Login to Docker Hub
@@ -54,6 +54,6 @@ jobs:
           push: true
           tags: |
             kantorge/yaffa:latest
-            kantorge/yaffa:${{ env.github.ref_name }}
+            kantorge/yaffa:${{ env.DOCKER_VERSION_TAG }}
           context: .
           file: ./docker/Dockerfile
