--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -21,18 +21,24 @@ jobs:
       - name: Check out the repository
         uses: actions/checkout@v2
 
-      - name: Set github.ref_name
+      - name: Set github.ref_name from workflow_dispatch
         if: github.event_name == 'workflow_dispatch'
-        run: echo "github.ref_name=${{ github.event.inputs.ref_name }}" >> $GITHUB_ENV
+        run: echo "DOCKER_VERSION_TAG=${{ github.event.inputs.ref_name }}" >> $GITHUB_ENV
+
+      - name: Set github.ref_name from tag
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
+        run: echo "DOCKER_VERSION_TAG=${{ github.ref_name }}" >> $GITHUB_ENV
 
       - name: Print github.ref_name
-        run: echo "github.ref_name is ${{ github.ref_name }}"
+        run: |
+          echo "github.event_name is ${{ github.event_name }}"
+          echo "github.ref_name is ${{ env.DOCKER_VERSION_TAG }}"
 
       # Steps for building and pushing
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Set up QEMU
@@ -48,6 +54,6 @@ jobs:
           push: true
           tags: |
             kantorge/yaffa:latest
-            kantorge/yaffa:${{ github.ref_name }}
+            kantorge/yaffa:${{ env.DOCKER_VERSION_TAG }}
           context: .
           file: ./docker/Dockerfile
