fix: Docker-related clarification in the .env.example file

--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,10 @@ APP_KEY=PleaseReplaceThisWithARandomStringOf32Chars
 
 ### Database configuration ###
 DB_CONNECTION=mysql
+# Use localhost or 127.0.0.1 for the host, if the database is running on the same server as the application
 DB_HOST=127.0.0.1
+# Use the name of the database service, if the database is running in a Docker container. This is 'db' in the default Docker setup of YAFFA.
+# DB_HOST=db
 DB_PORT=3306
 DB_DATABASE=yaffa_db
 DB_USERNAME=yaffa_user
