--- a/.env.example
+++ b/.env.example
@@ -53,9 +53,13 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=info@yaffa.test
 MAIL_FROM_NAME=YAFFA
 
-# The URL of the application, used for generating links in emails
-# This URL is independent of the actual URL used to access the application, which you can configure in the web server
+# The URL of the application, used for generating links in emails and to set the base URL for the application
 APP_URL=http://localhost
+
+# Domain settings for cookies and sessions
+# These settings are required if you are running the application on a different port or subdomain
+#SANCTUM_STATEFUL_DOMAINS=yoursubdomain.yourdomain.com:yourport
+#SESSION_DOMAIN=.yourdomain.com
 
 #############################
 ### Advanced app features ###
